--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
         <!-- Daftar Pustaka (Collapsible) -->
         <div class="mt-4">
-            <button class="btn btn-sm btn-outline-secondary w-100" type="button" data-bs-toggle="collapse" data-bs-target="#daftarPustaka" aria-expanded="false">
+            <button class="btn btn-sm btn-success w-100" type="button" data-bs-toggle="collapse" data-bs-target="#daftarPustaka" aria-expanded="false">
                 <i class="fa-solid fa-book me-2"></i> Lihat Daftar Pustaka / Referensi
             </button>
             <div class="collapse mt-2" id="daftarPustaka">
