--- a/index.html
+++ b/index.html
@@ -190,21 +190,58 @@
                     <div class="accordion-body">
                         <p>Faktor risiko hipertensi dibagi menjadi dua kelompok utama:</p>
                         
-                        <h6 class="fw-bold text-danger"><i class="fa-solid fa-lock"></i> Tidak Dapat Diubah</h6>
-                        <ul class="mb-3">
-                            <li><strong>Usia:</strong> Penurunan elastisitas pembuluh darah seiring bertambahnya umur.</li>
-                            <li><strong>Jenis Kelamin:</strong> Pria lebih berisiko di usia muda, wanita lebih berisiko setelah menopause (penurunan hormon estrogen).</li>
-                            <li><strong>Genetik:</strong> Riwayat keluarga dengan hipertensi meningkatkan risiko secara signifikan.</li>
-                        </ul>
+                        <h6 class="fw-bold text-danger border-bottom pb-2 mb-3"><i class="fa-solid fa-lock"></i> Tidak Dapat Diubah</h6>
+                        <div class="risk-grid mb-4">
+                            <div class="risk-item">
+                                <i class="fa-solid fa-hourglass-half risk-icon text-secondary"></i>
+                                <h6 class="fw-bold small">Usia</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Elastisitas pembuluh darah menurun.</p>
+                            </div>
+                            <div class="risk-item">
+                                <i class="fa-solid fa-venus-mars risk-icon text-secondary"></i>
+                                <h6 class="fw-bold small">Jenis Kelamin</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Pria (muda), Wanita (menopause).</p>
+                            </div>
+                            <div class="risk-item">
+                                <i class="fa-solid fa-dna risk-icon text-secondary"></i>
+                                <h6 class="fw-bold small">Genetik</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Riwayat keluarga hipertensi.</p>
+                            </div>
+                        </div>
 
-                        <h6 class="fw-bold text-success"><i class="fa-solid fa-unlock"></i> Dapat Diubah (Gaya Hidup)</h6>
-                        <ul>
-                            <li><strong>Obesitas:</strong> Meningkatkan risiko hingga 1.8x lipat karena beban kerja jantung bertambah.</li>
-                            <li><strong>Merokok:</strong> Zat kimia rokok merusak dinding arteri dan memicu penyempitan pembuluh darah.</li>
-                            <li><strong>Stres:</strong> Memicu hormon adrenalin yang memacu jantung berdetak lebih cepat.</li>
-                            <li><strong>Pola Makan Buruk:</strong> Konsumsi tinggi garam, lemak, dan makanan olahan (Junk Food).</li>
-                            <li><strong>Kurang Aktivitas Fisik:</strong> Menyebabkan penumpukan lemak dan penurunan kebugaran jantung.</li>
-                        </ul>
+                        <h6 class="fw-bold text-success border-bottom pb-2 mb-3"><i class="fa-solid fa-unlock"></i> Dapat Diubah (Gaya Hidup)</h6>
+                        <div class="risk-grid">
+                            <div class="risk-item">
+                                <i class="fa-solid fa-weight-scale risk-icon text-warning"></i>
+                                <h6 class="fw-bold small">Obesitas</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Meningkatkan volume darah & beban kerja jantung.</p>
+                            </div>
+                            <div class="risk-item">
+                                <i class="fa-solid fa-smoking risk-icon text-dark"></i>
+                                <h6 class="fw-bold small">Merokok</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Zat kimia merusak dinding arteri & memicu penyempitan.</p>
+                            </div>
+                            <div class="risk-item">
+                                <i class="fa-solid fa-brain risk-icon text-danger"></i>
+                                <h6 class="fw-bold small">Stres</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Hormon stres (kortisol) meningkatkan detak jantung.</p>
+                            </div>
+                            <div class="risk-item">
+                                <i class="fa-solid fa-burger risk-icon text-warning"></i>
+                                <h6 class="fw-bold small">Pola Makan Buruk</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Tinggi garam (natrium), lemak jenuh, dan makanan olahan.</p>
+                            </div>
+                            <div class="risk-item">
+                                <i class="fa-solid fa-person-walking risk-icon text-success"></i>
+                                <h6 class="fw-bold small">Kurang Gerak</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Menyebabkan kekakuan arteri & penurunan kebugaran jantung.</p>
+                            </div>
+                            <div class="risk-item">
+                                <i class="fa-solid fa-martini-glass-empty risk-icon text-danger"></i>
+                                <h6 class="fw-bold small">Konsumsi Alkohol</h6>
+                                <p class="small-muted mb-0" style="font-size: 0.8rem;">Konsumsi berlebih merusak pembuluh darah & organ.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -220,27 +257,39 @@
                         <p>Hipertensi sering disebut <em>"Silent Killer"</em> karena seringkali tidak bergejala namun mematikan. Jika tidak terkontrol, dapat menyebabkan kerusakan organ vital:</p>
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <div class="p-3 bg-light rounded border-start border-4 border-danger h-100">
-                                    <h6 class="fw-bold">1. Jantung & Pembuluh Darah</h6>
-                                    <p class="small mb-0">Gagal jantung, serangan jantung, dan kerusakan arteri (aterosklerosis).</p>
+                                <div class="komplikasi-card">
+                                    <img src="https://i.pinimg.com/736x/c4/8a/32/c48a3278e5c23b7982c4458eb60a70de.jpg" alt="serangan jantung" class="komplikasi-img">
+                                    <div>
+                                        <h6 class="fw-bold mb-1">1. Jantung & Pembuluh Darah</h6>
+                                        <p class="small mb-0 text-muted">Gagal jantung, serangan jantung, dan kerusakan arteri (aterosklerosis).</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="p-3 bg-light rounded border-start border-4 border-danger h-100">
-                                    <h6 class="fw-bold">2. Otak (Stroke)</h6>
-                                    <p class="small mb-0">Penyumbatan atau pecahnya pembuluh darah otak yang berakibat kelumpuhan atau kematian.</p>
+                                <div class="komplikasi-card">
+                                    <img src="https://i.pinimg.com/736x/4d/be/44/4dbe4486e50c072321118e759390bfe1.jpg" alt="Stroke" class="komplikasi-img">
+                                    <div>
+                                        <h6 class="fw-bold mb-1">2. Otak (Stroke)</h6>
+                                        <p class="small mb-0 text-muted">Penyumbatan atau pecahnya pembuluh darah otak yang berakibat kelumpuhan atau kematian.</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="p-3 bg-light rounded border-start border-4 border-danger h-100">
-                                    <h6 class="fw-bold">3. Ginjal</h6>
-                                    <p class="small mb-0">Gagal ginjal kronis akibat kerusakan pembuluh darah halus di ginjal.</p>
+                                <div class="komplikasi-card">
+                                    <img src="https://i.pinimg.com/736x/50/ab/63/50ab631dd50e4e3826d808db240d857d.jpg" alt="serangan ginjal" class="komplikasi-img">
+                                    <div>
+                                        <h6 class="fw-bold mb-1">3. Ginjal</h6>
+                                        <p class="small mb-0 text-muted">Gagal ginjal kronis akibat kerusakan pembuluh darah halus di ginjal.</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="p-3 bg-light rounded border-start border-4 border-danger h-100">
-                                    <h6 class="fw-bold">4. Mata (Retinopati)</h6>
-                                    <p class="small mb-0">Kerusakan retina yang dapat berujung pada gangguan penglihatan hingga kebutaan.</p>
+                                <div class="komplikasi-card">
+                                    <img src="https://i.pinimg.com/736x/f0/41/16/f041169e57f84d3d940629ed267bb9c7.jpg" alt="serangan mata" class="komplikasi-img">
+                                    <div>
+                                        <h6 class="fw-bold mb-1">4. Mata (Retinopati)</h6>
+                                        <p class="small mb-0 text-muted">Kerusakan retina yang dapat berujung pada gangguan penglihatan hingga kebutaan.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -251,7 +300,7 @@
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        <i class="fa-solid fa-utensils"></i> <strong>Pencegahan & Diet Sehat (DASH)</strong>
+                        <i class="fa-solid fa-utensils"></i> <strong>Pencegahan & Diet Sehat</strong>
                     </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -261,9 +310,9 @@
                         <div class="alert alert-success">
                             <h6 class="fw-bold"><i class="fa-solid fa-check-circle"></i> Batas Konsumsi Harian (Permenkes No. 30/2013)</h6>
                             <ul class="mb-0 small">
-                                <li><strong>Gula:</strong> Maksimal 4 sendok makan (50 gram).</li>
-                                <li><strong>Garam:</strong> Maksimal 1 sendok teh (5 gram).</li>
-                                <li><strong>Lemak/Minyak:</strong> Maksimal 5 sendok makan (67 gram).</li>
+                                <li class="mb-1"><i class="fa-solid fa-cubes-stacked me-2 text-warning"></i> <strong>Gula:</strong> Maksimal 4 sendok makan (50 gram).</li>
+                                <li class="mb-1"><i class="fa-solid fa-spoon me-2 text-secondary"></i> <strong>Garam:</strong> Maksimal 1 sendok teh (5 gram).</li>
+                                <li class="mb-1"><i class="fa-solid fa-bottle-droplet me-2 text-warning"></i> <strong>Lemak/Minyak:</strong> Maksimal 5 sendok makan (67 gram).</li>
                             </ul>
                         </div>
 
@@ -288,29 +337,33 @@
                     <div class="accordion-body">
                         <p>Beberapa bahan pangan lokal terbukti secara ilmiah dapat membantu menurunkan tekanan darah:</p>
                         <div class="list-group list-group-flush">
-                            <div class="list-group-item">
-                                <div class="d-flex w-100 justify-content-between">
+                            <div class="list-group-item d-flex align-items-center gap-3 border-0 mb-2 shadow-sm rounded">
+                                <img src="https://i.pinimg.com/736x/da/54/00/da5400894055924f0d12cc9fad01dc31.jpg" alt="Jus Wortel" class="herbal-thumb">
+                                <div>
                                     <h6 class="mb-1 fw-bold text-success">Jus Belimbing & Wortel</h6>
+                                    <p class="mb-0 small text-muted">Kombinasi 75g belimbing manis + 100g wortel + 100ml air. Konsumsi satu kali perhari saat pagi hari selama 7 hari. jus wortel + belimbing tinggi serat dan antioksidan dapat membantu mengendalikan tekanan darah agar tetap optimal</p>
                                 </div>
-                                <p class="mb-1 small">Kombinasi 75g belimbing manis + 100g wortel + 100ml air. Konsumsi pagi hari selama 7 hari.</p>
                             </div>
-                            <div class="list-group-item">
-                                <div class="d-flex w-100 justify-content-between">
+                            <div class="list-group-item d-flex align-items-center gap-3 border-0 mb-2 shadow-sm rounded">
+                                <img src="https://i.pinimg.com/736x/87/62/a0/8762a060a0ef13b4031a330e9d541123.jpg" alt="Jus Semangka" class="herbal-thumb">
+                                <div>
                                     <h6 class="mb-1 fw-bold text-success">Jus Semangka</h6>
+                                    <p class="mb-0 small text-muted">200g semangka + 100ml air. konsumsi satu kali per hari saat pagi hari selama 7 hari. jus semangka Kaya akan serat dan kalium yang dapat membantu menurunkan dan mengoptimalkan tekanan darah.</p>
                                 </div>
-                                <p class="mb-1 small">200g semangka + 100ml air. Kaya akan Citrulline yang melebarkan pembuluh darah.</p>
                             </div>
-                            <div class="list-group-item">
-                                <div class="d-flex w-100 justify-content-between">
+                            <div class="list-group-item d-flex align-items-center gap-3 border-0 mb-2 shadow-sm rounded">
+                                <img src="https://i.pinimg.com/1200x/27/0c/6b/270c6bd48c87a1dbd4d29e1e0dcfadd6.jpg" alt="Seledri" class="herbal-thumb">
+                                <div>
                                     <h6 class="mb-1 fw-bold text-success">Air Rebusan Seledri</h6>
+                                    <p class="mb-0 small text-muted">Rebus 3 batang seledri dengan 250ml air hingga tersisa 200ml. Minum satu kali setiap pagi hari selama 7 hari. minuman rebusan daun seledri mengandung tinggi zat flavonoid dan sudah terbukti dapat mengoptimalkan tekanan darah</p>
                                 </div>
-                                <p class="mb-1 small">Rebus 3 batang seledri dengan 250ml air hingga tersisa 200ml. Minum pagi hari.</p>
                             </div>
-                            <div class="list-group-item">
-                                <div class="d-flex w-100 justify-content-between">
+                            <div class="list-group-item d-flex align-items-center gap-3 border-0 mb-2 shadow-sm rounded">
+                                <img src="https://i.pinimg.com/1200x/2f/62/20/2f62207bed6b44e2ee6f15482051ec32.jpg" alt="Mentimun" class="herbal-thumb">
+                                <div>
                                     <h6 class="mb-1 fw-bold text-success">Jus Mentimun</h6>
+                                    <p class="mb-0 small text-muted">100g mentimun + 100ml air. Minum satu kali setiap pagi hari selama 7 hari. minuman jus mentimun mengandung Tinggi kalium untuk menyeimbangkan natrium tubuh dan mengoptimalkan tekanan darah dalam tubuh.</p>
                                 </div>
-                                <p class="mb-1 small">100g mentimun + 100ml air. Tinggi kalium untuk menyeimbangkan natrium tubuh.</p>
                             </div>
                         </div>
                         <div class="mt-2 small text-muted fst-italic">*Konsultasikan dengan tenaga kesehatan jika sedang mengonsumsi obat dokter.</div>
