Fix: resolve merge conflicts and CSS syntax errors

--- a/awal.html
+++ b/awal.html
@@ -319,23 +319,12 @@
         </div>
     </section>
 
-<<<<<<< HEAD
     <!-- FAQ Section -->
     <section class="container faq-section reveal mb-5">
         <div class="row justify-content-center mb-4">
             <div class="col-md-8 text-center">
                 <h3 class="fw-bold mb-2 text-success"><i class="fa-solid fa-circle-question"></i> Pertanyaan Umum</h3>
                 <p class="text-muted">Jawaban singkat seputar hipertensi dan Nutri Herbal</p>
-=======
-        <!-- FAQ Section -->
-        <section class="container faq-section animate__animated animate__fadeInUp mb-5">
-            <div class="row justify-content-center mb-4">
-                <div class="col-md-8 text-center">
-                    <h3 class="fw-bold mb-2 text-success"><i class="fa-solid fa-circle-question"></i> Pertanyaan Umum
-                    </h3>
-                    <p class="text-muted">Jawaban singkat seputar hipertensi dan Nutri Herbal</p>
-                </div>
->>>>>>> 8c5f1f4c18c6fb745130b8ff9d9bfae491c6248b
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-10">
@@ -374,32 +363,8 @@
             </div>
         </section>
 
-        <!-- Instansi Terkait -->
-        <main class="container institusi-section animate__animated animate__fadeInUp">
-            <div class="institusi-title"><i class="fa-solid fa-building-columns"></i> Instansi Terkait</div>
-            <div class="institusi-logos">
-                <img class="institusi-logo"
-                    src="https://kemkes.go.id/app_asset/image_content/167420049363ca45ad438f30.09191866.png"
-                    alt="Kemenkes" title="Kementerian Kesehatan RI">
-                <img class="institusi-logo" src="images/pky-image.png" alt="Poltekkes Jogja" title="Poltekkes Jogja">
-                <img class="institusi-logo"
-                    src="https://images.seeklogo.com/logo-png/39/1/puskesmas-logo-png_seeklogo-394834.png"
-                    alt="Puskesmas" title="Puskesmas">
-            </div>
-        </main>
-
-
-        <!-- Back to Home Floating Button -->
-        <div class="back-home-float">
-            <a href="awal.html" title="Kembali ke Beranda">
-                <i class="fa-solid fa-house"></i>
-            </a>
-        </div>
-<<<<<<< HEAD
-    </section>
-    
     <!-- Instansi Terkait -->
-    <main class="container institusi-section reveal">
+    <section class="container institusi-section reveal">
         <div class="institusi-title"><i class="fa-solid fa-building-columns"></i> Instansi Terkait</div>
         <div class="institusi-logos">
             <img class="institusi-logo"
@@ -409,22 +374,9 @@
             <img class="institusi-logo"
                 src="https://images.seeklogo.com/logo-png/39/1/puskesmas-logo-png_seeklogo-394834.png" alt="Puskesmas"
                 title="Puskesmas">
-=======
-
-        <!-- WhatsApp Floating Button -->
-        <div class="whatsapp-float">
-            <a href="https://wa.me/6281572616074" target="_blank" title="Chat WhatsApp">
-                <i class="fab fa-whatsapp"></i>
-            </a>
->>>>>>> 8c5f1f4c18c6fb745130b8ff9d9bfae491c6248b
         </div>
+    </section>
 
-        <!-- Scroll Top Button (Opsi 3) -->
-        <button id="scrollTopBtn" class="scroll-top-btn" title="Kembali ke Atas">
-            <i class="fa-solid fa-arrow-up"></i>
-        </button>
-
-<<<<<<< HEAD
     <!-- Back to Home Floating Button -->
     <div class="back-home-float">
         <a href="awal.html" title="Kembali ke Beranda">
@@ -455,25 +407,6 @@
                         <a href="#" class="text-white me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
                         <a href="#" class="text-white me-3"><i class="fa-brands fa-facebook fa-lg"></i></a>
                         <a href="#" class="text-white"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
-=======
-        <!-- Footer -->
-        <footer class="main-footer py-4 mt-5 animate__animated animate__fadeInUp">
-            <div class="container">
-                <div class="row align-items-center g-3">
-                    <div class="col-md-6 text-center text-md-start">
-                        <p class="mb-0 fw-bold">&copy; 2025 Nutri Herbal</p>
-                        <small class="opacity-75">Sehat mulai dari diri sendiri.</small>
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <div class="social-links">
-                            <a href="mailto:info@nutriherbal.com" class="text-decoration-none me-3"><i
-                                    class="fa-solid fa-envelope me-1"></i> Hubungi Kami</a>
-                            <a href="https://instagram.com" target="_blank" class="me-3"><i
-                                    class="fa-brands fa-instagram fa-lg"></i></a>
-                            <a href="https://facebook.com" target="_blank"><i
-                                    class="fa-brands fa-facebook fa-lg"></i></a>
-                        </div>
->>>>>>> 8c5f1f4c18c6fb745130b8ff9d9bfae491c6248b
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6">
@@ -501,6 +434,7 @@
             <div class="text-center">
                 <p class="mb-0 small opacity-75">&copy; 2026 Nutri Herbal PLus+. Seluruh Hak Cipta Dilindungi.</p>
             </div>
+        </div>
         </footer>
 
         <!-- Bootstrap JS -->
