--- a/awal.html
+++ b/awal.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/awal.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/global.css?v=20260227">
+    <link rel="stylesheet" href="css/awal.css?v=20260227">
+    <link rel="stylesheet" href="css/responsive.css?v=20260227">
 </head>
 
 <body id="main-body">
@@ -481,8 +481,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
         <!-- Custom Scripts -->
-        <script src="js/global.js"></script>
-        <script src="js/awal.js"></script>
+        <script src="js/global.js?v=20260227"></script>
+        <script src="js/awal.js?v=20260227"></script>
 </body>
 
 </html>
