--- a/grafik.html
+++ b/grafik.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/grafik.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/global.css?v=20260227">
+    <link rel="stylesheet" href="css/grafik.css?v=20260227">
+    <link rel="stylesheet" href="css/responsive.css?v=20260227">
 </head>
 
 <body>
@@ -103,7 +103,7 @@
                     </div>
                     <!-- Ubah 15 menjadi angka yang diinginkan -->
                     <h2 class="fw-bold mb-1">+<span class="counter" data-target="17">0</span>%</h2>
-                    <p class="mb-0 opacity-75 small">Peningkatan kasus dalam 3 tahun terakhir.</p>
+                    <p class="mb-0 opacity-75 small">Peningkatan kasus dalam 3 bulan terakhir.</p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -115,8 +115,8 @@
                         <h5 class="mb-0 fw-bold">Wilayah Tertinggi</h5>
                     </div>
                     <!-- ubah jadi 77% -->
-                    <h2 class="fw-bold mb-1"><span class="counter" data-target="77">0</span>%</h2>
-                    <p class="mb-0 opacity-75 small">Konsentrasi kasus tertinggi (Kec. Depok).</p>
+                    <h2 class="fw-bold mb-1"><span class="counter" data-target="69">0</span>%</h2>
+                    <p class="mb-0 opacity-75 small">Konsentrasi kasus tertinggi (Kel.mlati).</p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -129,7 +129,7 @@
                     </div>
                     <!--ubah ubah kelompok rentan-->
                     <h2 class="fw-bold mb-1"><span class="counter" data-target="45">0</span> - <span class="counter"
-                            data-target="65">0</span> Th</h2>
+                            data-target="80">0</span> Th</h2>
                     <p class="mb-0 opacity-75 small">Mayoritas penderita berada di rentang ini.</p>
                 </div>
             </div>
@@ -238,8 +238,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="js/global.js"></script>
-    <script src="js/grafik.js"></script>
+    <script src="js/global.js?v=20260227"></script>
+    <script src="js/grafik.js?v=20260227"></script>
 
     <!-- Back to Home Floating Button -->
     <div class="back-home-float">
