--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/global.css?v=20260227">
+    <link rel="stylesheet" href="css/index.css?v=20260227">
+    <link rel="stylesheet" href="css/responsive.css?v=20260227">
 </head>
 
 <body id="main-body">
@@ -222,10 +222,10 @@
                                         lemak tubuh dan meningkatkan resiko hipertensi.</div>
                                 </div>
                                 <div class="risk-card-mini">
-                                    <i class="fa-solid fa-wine-glass-empty color-alkohol"></i>
-                                    <strong class="color-alkohol"> Konsumsi Alkohol</strong>
-                                    <div class="risk-desc">Konsumsi alkohol berlebihan dapat merusak jantung dan
-                                        meningkatkan tekanan darah.</div>
+                                    <i class="fa-solid fa-mug-hot color-alkohol"></i>
+                                    <strong class="color-alkohol">Konsumsi Kopi Berlebihan</strong>
+                                    <div class="risk-desc">Kafein dalam kopi yang berlebihan dalam tubuh akan meningkatkan tekanan darah sementara dan dapat menyebabkan hipertensi jika dikonsumsi secara berlebihan.    
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="lifestyle-card ls-orange">
                         <i class="fa-solid fa-drumstick-bite"></i>
-                        <span>Menghindari makanan berlemak tinggi, seperti jeroan, otak, dan santan kental.</span>
+                        <span>Mengurangi makanan berlemak tinggi, seperti jeroan, otak, dan santan kental.</span>
                     </div>
                     <div class="lifestyle-card ls-blue">
                         <i class="fa-solid fa-glass-water"></i>
@@ -342,6 +342,10 @@
                     <div class="lifestyle-card ls-red">
                         <i class="fa-solid fa-smoking-ban"></i>
                         <span> mengurangi atau Berhenti merokok dan  konsumsi alkohol.</span>
+                    </div>
+                    <div class="lifestyle-card ls-orange">
+                        <i class="fa-solid fa-mug-hot"></i>
+                        <span>mengurangi konsumsi kopi yang berlebihan.</span>
                     </div>
                 </div>
             </section>
@@ -673,8 +677,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <script src="js/global.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/global.js?v=20260227"></script>
+    <script src="js/index.js?v=20260227"></script>
 
     <!-- Footer -->
     <!-- 
