--- a/kalkulator.html
+++ b/kalkulator.html
@@ -16,10 +16,10 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/kalkulator.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/global.css?v=20260227">
+    <link rel="stylesheet" href="css/index.css?v=20260227">
+    <link rel="stylesheet" href="css/kalkulator.css?v=20260227">
+    <link rel="stylesheet" href="css/responsive.css?v=20260227">
 </head>
 
 <body id="main-body">
@@ -450,13 +450,6 @@
                         </div>
                     </div>
 
-                    <!-- Tombol Info Evaluasi BB -->
-                    <div class="mb-3">
-                        <button type="button" class="btn btn-sm btn-outline-info rounded-pill px-3 fw-bold" data-bs-toggle="modal" data-bs-target="#modalInfoIMT">
-                            <i class="fa-solid fa-weight-scale me-1"></i> Info Evaluasi Berat Badan
-                        </button>
-                    </div>
-
                     <div class="row g-2">
                         <div class="col-md-6">
                             <label for="beratBadan">Berat Badan Sekarang (kg)</label>
@@ -475,42 +468,6 @@
                                     min="1">
                                 <span class="input-group-text">cm</span>
                             </div>
-                        </div>
-                    </div>
-
-                    <!-- Toggle Evaluasi Penurunan BB -->
-                    <div class="mt-4 p-3 rounded-4 bg-light border d-flex align-items-center justify-content-between">
-                        <div class="d-flex align-items-center gap-2">
-                            <div class="form-check form-switch mb-0">
-                                <input class="form-check-input" type="checkbox" role="switch" id="evaluasiBB" onchange="toggleEvaluasiBB()">
-                            </div>
-                            <label class="form-check-label eval-toggle-label" for="evaluasiBB">Evaluasi Penurunan Berat Badan (Opsional)</label>
-                        </div>
-                    </div>
-
-                    <!-- Fitur Tambahan: Evaluasi Penurunan BB (Section) -->
-                    <div id="evaluasiBBSection" class="d-none animate__animated animate__fadeIn mt-3 p-3 rounded-3 bg-light border">
-                        <div class="row g-2">
-                            <div class="col-md-6">
-                                <label for="bbSebelumnya" class="small">Berat Badan Sebelumnya (kg)</label>
-                                <div class="input-group input-group-sm no-stack-mobile">
-                                    <span class="input-group-text"><i class="fa-solid fa-history"></i></span>
-                                    <input type="number" id="bbSebelumnya" class="form-control" placeholder="BB lama">
-                                    <span class="input-group-text">kg</span>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="jangkaWaktu" class="small">Jangka Waktu</label>
-                                <select id="jangkaWaktu" class="form-select form-select-sm">
-                                    <option value="1_minggu">1 Minggu</option>
-                                    <option value="1_bulan">1 Bulan</option>
-                                    <option value="3_bulan">3 Bulan</option>
-                                    <option value="6_bulan">6 Bulan</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="small text-muted mt-2 italic" style="font-size: 0.7rem;">
-                            *Berdasarkan Tabel 2.5 Interpretasi Penurunan BB (Krause's & PGS 2014)
                         </div>
                     </div>
 
@@ -806,8 +763,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <script src="js/global.js"></script>
-    <script src="js/kalkulator.js"></script>
+    <script src="js/global.js?v=20260227"></script>
+    <script src="js/kalkulator.js?v=20260227"></script>
 
     <!-- Footer -->
     <footer class="main-footer py-4 mt-4 reveal">
@@ -849,45 +806,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Modal Info Evaluasi IMT -->
-    <div class="modal fade" id="modalInfoIMT" tabindex="-1" aria-labelledby="modalInfoIMTLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content border-0 shadow-lg" style="border-radius: 20px;">
-                <div class="modal-header border-0 bg-imt-teal text-white p-4" style="border-radius: 20px 20px 0 0;">
-                    <h5 class="modal-title d-flex align-items-center gap-2" id="modalInfoIMTLabel">
-                        <i class="fa-solid fa-circle-info fs-4"></i>
-                        Info Evaluasi Berat Badan
-                    </h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body p-4">
-                    <div class="small text-muted mb-3 italic">Berdasarkan Pedoman Gizi Seimbang 2014:</div>
-                    <ul class="list-unstyled d-flex flex-column gap-3">
-                        <li class="d-flex gap-3">
-                            <div class="bg-imt-teal-subtle text-imt-teal rounded-circle d-flex align-items-center justify-content-center flex-shrink-0" style="width: 32px; height: 32px;">1</div>
-                            <div><strong>Waktu Menimbang:</strong> Sebaiknya dilakukan secara rutin untuk memantau hasil intervensi gizi.</div>
-                        </li>
-                        <li class="d-flex gap-3">
-                            <div class="bg-imt-teal-subtle text-imt-teal rounded-circle d-flex align-items-center justify-content-center flex-shrink-0" style="width: 32px; height: 32px;">2</div>
-                            <div><strong>Kondisi Akurat:</strong> Gunakan alat timbang yang sama, timbang sebelum makan, setelah berkemih, dan dengan pakaian minimal.</div>
-                        </li>
-                        <li class="d-flex gap-3">
-                            <div class="bg-imt-teal-subtle text-imt-teal rounded-circle d-flex align-items-center justify-content-center flex-shrink-0" style="width: 32px; height: 32px;">3</div>
-                            <div><strong>Indikator Lain:</strong> Selain IMT, evaluasi gizi juga melibatkan persentase berat badan ideal dan persentase perubahan berat badan.</div>
-                        </li>
-                        <li class="d-flex gap-3">
-                            <div class="bg-imt-teal-subtle text-imt-teal rounded-circle d-flex align-items-center justify-content-center flex-shrink-0" style="width: 32px; height: 32px;">4</div>
-                            <div><strong>Catatan Klinis:</strong> Pada pasien rawat inap, IMT berkorelasi dengan tingkat keparahan penyakit dan risiko mortalitas.</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="modal-footer border-0 p-4 pt-0">
-                    <button type="button" class="btn btn-imt-teal text-white w-100 rounded-pill py-2" data-bs-dismiss="modal">Saya Mengerti</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Modal Cara Mengukur yang Benar -->
     <div class="modal fade" id="modalCaraUkur" tabindex="-1" aria-labelledby="modalCaraUkurLabel" aria-hidden="true">
