--- a/starting.html
+++ b/starting.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/starting.css">
+    <link rel="stylesheet" href="css/global.css?v=20260227">
+    <link rel="stylesheet" href="css/starting.css?v=20260227">
 </head>
 
 <body class="starting-body">
@@ -105,7 +105,7 @@
         </div>
     </div>
 
-    <script src="js/starting.js"></script>
+    <script src="js/starting.js?v=20260227"></script>
 </body>
 
 </html>
