--- a/vid.html
+++ b/vid.html
@@ -8,9 +8,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/vid.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/global.css?v=20260227">
+    <link rel="stylesheet" href="css/vid.css?v=20260227">
+    <link rel="stylesheet" href="css/responsive.css?v=20260227">
 </head>
 
 <body>
@@ -112,8 +112,8 @@
             <!-- Video items: data-video-id, data-title, data-tags (comma) -->
             <div class="col" data-title="APA YA HIPERTENSI ITU?" data-tags="hipertensi,pengetahuan">
                 <div class="card video-card h-100">
-                    <div class="video-poster" data-video-id="IQv4DBxsjz4" aria-label="Putar: APA YA HIPERTENSI ITU?">
-                        <img src="https://img.youtube.com/vi/IQv4DBxsjz4/hqdefault.jpg" loading="lazy"
+                    <div class="video-poster" data-video-id="VA8kPPk9USE" aria-label="Putar: APA YA HIPERTENSI ITU?">
+                        <img src="https://img.youtube.com/vi/VA8kPPk9USE/hqdefault.jpg" loading="lazy"
                             alt="APA YA HIPERTENSI ITU?">
                         <div class="play-badge"><i class="fa-solid fa-circle-play fa-3x"></i></div>
                         <div class="meta-badge">Definisi & Risiko</div>
@@ -127,9 +127,9 @@
                             <div class="tag">Pengetahuan</div>
                         </div>
                         <div class="card-actions mt-2">
-                            <button class="btn btn-sm btn-outline-primary share-btn" data-video-id="IQv4DBxsjz4"><i
+                                <button class="btn btn-sm btn-outline-primary share-btn" data-video-id="VA8kPPk9USE"><i
                                     class="fa-solid fa-share-nodes me-1"></i> Bagikan</button>
-                            <button class="btn btn-sm btn-outline-success watchlist-btn" data-video-id="IQv4DBxsjz4"><i
+                            <button class="btn btn-sm btn-outline-success watchlist-btn" data-video-id="VA8kPPk9USE"><i
                                     class="fa-regular fa-bookmark me-1"></i> Simpan</button>
                         </div>
                     </div>
@@ -255,8 +255,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/global.js"></script>
-    <script src="js/vid.js"></script>
+    <script src="js/global.js?v=20260227"></script>
+    <script src="js/vid.js?v=20260227"></script>
 
 
     <!-- Back to Home Floating Button -->
